five questions completed

--- a/Finding-an-Interesting-Dataset-alisk8/netflix_data.ipynb
+++ b/Finding-an-Interesting-Dataset-alisk8/netflix_data.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "## Questions to answer using this dataset\n",
     "\n",
-    "1. Does age-certification play a role in the popularity of a show/movie?\n",
-    "2. Do genres have an affect on the rating of a movie/show?\n",
-    "3. Does the genre of the movie have a correlation with the runtime of the show/movie?\n",
-    "4. Do the number of seasons of a show have a correlation with the popularity of the show?\n",
-    "5. Are there certain genres more prevelant than in past years?\n",
+    "1. Does age-certification play a role in the ratings of a show/movie?\n",
+    "2. Do movies/tv shows with the genre \"comedy\" tend to do better than movies/tv shows w/out \"comedy\"?\n",
+    "3. Do 'drama' movies tend to have a higher runtime?\n",
+    "4. Do TV shows with more than 5 number of seasons tend to have a better rating than shows that donot?\n",
+    "5. Has the 'crime' genre increased in the last 25 years compared to the older years?\n",
     "6. Does the production country have a correlation with the runtime of a movie?\n",
     "7. Does the lenght of the title of the show/movie affect the ratings?\n",
     "8. Does using specific letters in the movie/show name affect the popularity of the show/movie?\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "f7fb60c3",
    "metadata": {},
    "outputs": [
@@ -154,41 +154,189 @@
        "      <td>95.337</td>\n",
        "      <td>7.7</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5801</th>\n",
+       "      <td>tm1014599</td>\n",
+       "      <td>Fine Wine</td>\n",
+       "      <td>MOVIE</td>\n",
+       "      <td>A beautiful love story that can happen between...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>['romance', 'drama']</td>\n",
+       "      <td>['NG']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>tt13857480</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>0.966</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5802</th>\n",
+       "      <td>tm1108171</td>\n",
+       "      <td>Edis Starlight</td>\n",
+       "      <td>MOVIE</td>\n",
+       "      <td>Rising star Edis's career journey with ups and...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>74</td>\n",
+       "      <td>['music', 'documentation']</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.036</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5803</th>\n",
+       "      <td>tm1045018</td>\n",
+       "      <td>Clash</td>\n",
+       "      <td>MOVIE</td>\n",
+       "      <td>A man from Nigeria returns to his family in Ca...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>88</td>\n",
+       "      <td>['family', 'drama']</td>\n",
+       "      <td>['NG', 'CA']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>tt14620732</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0.709</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5804</th>\n",
+       "      <td>tm1098060</td>\n",
+       "      <td>Shadow Parties</td>\n",
+       "      <td>MOVIE</td>\n",
+       "      <td>A family faces destruction in a long-running c...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>116</td>\n",
+       "      <td>['action', 'thriller']</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>tt10168094</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.186</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5805</th>\n",
+       "      <td>ts271048</td>\n",
+       "      <td>Mighty Little Bheem: Kite Festival</td>\n",
+       "      <td>SHOW</td>\n",
+       "      <td>With winter behind them, Bheem and his townspe...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['family', 'comedy', 'animation']</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>tt13711094</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.979</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5806 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         id                                title   type  \\\n",
-       "0  ts300399  Five Came Back: The Reference Films   SHOW   \n",
-       "1   tm84618                          Taxi Driver  MOVIE   \n",
-       "2  tm127384      Monty Python and the Holy Grail  MOVIE   \n",
-       "3   tm70993                        Life of Brian  MOVIE   \n",
-       "4  tm190788                         The Exorcist  MOVIE   \n",
+       "             id                                title   type  \\\n",
+       "0      ts300399  Five Came Back: The Reference Films   SHOW   \n",
+       "1       tm84618                          Taxi Driver  MOVIE   \n",
+       "2      tm127384      Monty Python and the Holy Grail  MOVIE   \n",
+       "3       tm70993                        Life of Brian  MOVIE   \n",
+       "4      tm190788                         The Exorcist  MOVIE   \n",
+       "...         ...                                  ...    ...   \n",
+       "5801  tm1014599                            Fine Wine  MOVIE   \n",
+       "5802  tm1108171                       Edis Starlight  MOVIE   \n",
+       "5803  tm1045018                                Clash  MOVIE   \n",
+       "5804  tm1098060                       Shadow Parties  MOVIE   \n",
+       "5805   ts271048   Mighty Little Bheem: Kite Festival   SHOW   \n",
        "\n",
-       "                                         description  release_year  \\\n",
-       "0  This collection includes 12 World War II-era p...          1945   \n",
-       "1  A mentally unstable Vietnam War veteran works ...          1976   \n",
-       "2  King Arthur, accompanied by his squire, recrui...          1975   \n",
-       "3  Brian Cohen is an average young Jewish man, bu...          1979   \n",
-       "4  12-year-old Regan MacNeil begins to adapt an e...          1973   \n",
+       "                                            description  release_year  \\\n",
+       "0     This collection includes 12 World War II-era p...          1945   \n",
+       "1     A mentally unstable Vietnam War veteran works ...          1976   \n",
+       "2     King Arthur, accompanied by his squire, recrui...          1975   \n",
+       "3     Brian Cohen is an average young Jewish man, bu...          1979   \n",
+       "4     12-year-old Regan MacNeil begins to adapt an e...          1973   \n",
+       "...                                                 ...           ...   \n",
+       "5801  A beautiful love story that can happen between...          2021   \n",
+       "5802  Rising star Edis's career journey with ups and...          2021   \n",
+       "5803  A man from Nigeria returns to his family in Ca...          2021   \n",
+       "5804  A family faces destruction in a long-running c...          2021   \n",
+       "5805  With winter behind them, Bheem and his townspe...          2021   \n",
        "\n",
-       "  age_certification  runtime                 genres production_countries  \\\n",
-       "0             TV-MA       48      ['documentation']               ['US']   \n",
-       "1                 R      113     ['crime', 'drama']               ['US']   \n",
-       "2                PG       91  ['comedy', 'fantasy']               ['GB']   \n",
-       "3                 R       94             ['comedy']               ['GB']   \n",
-       "4                 R      133             ['horror']               ['US']   \n",
+       "     age_certification  runtime                             genres  \\\n",
+       "0                TV-MA       48                  ['documentation']   \n",
+       "1                    R      113                 ['crime', 'drama']   \n",
+       "2                   PG       91              ['comedy', 'fantasy']   \n",
+       "3                    R       94                         ['comedy']   \n",
+       "4                    R      133                         ['horror']   \n",
+       "...                ...      ...                                ...   \n",
+       "5801               NaN      100               ['romance', 'drama']   \n",
+       "5802               NaN       74         ['music', 'documentation']   \n",
+       "5803               NaN       88                ['family', 'drama']   \n",
+       "5804               NaN      116             ['action', 'thriller']   \n",
+       "5805               NaN        0  ['family', 'comedy', 'animation']   \n",
        "\n",
-       "   seasons    imdb_id  imdb_score  imdb_votes  tmdb_popularity  tmdb_score  \n",
-       "0      1.0        NaN         NaN         NaN            0.600         NaN  \n",
-       "1      NaN  tt0075314         8.3    795222.0           27.612         8.2  \n",
-       "2      NaN  tt0071853         8.2    530877.0           18.216         7.8  \n",
-       "3      NaN  tt0079470         8.0    392419.0           17.505         7.8  \n",
-       "4      NaN  tt0070047         8.1    391942.0           95.337         7.7  "
+       "     production_countries  seasons     imdb_id  imdb_score  imdb_votes  \\\n",
+       "0                  ['US']      1.0         NaN         NaN         NaN   \n",
+       "1                  ['US']      NaN   tt0075314         8.3    795222.0   \n",
+       "2                  ['GB']      NaN   tt0071853         8.2    530877.0   \n",
+       "3                  ['GB']      NaN   tt0079470         8.0    392419.0   \n",
+       "4                  ['US']      NaN   tt0070047         8.1    391942.0   \n",
+       "...                   ...      ...         ...         ...         ...   \n",
+       "5801               ['NG']      NaN  tt13857480         6.9        39.0   \n",
+       "5802                   []      NaN         NaN         NaN         NaN   \n",
+       "5803         ['NG', 'CA']      NaN  tt14620732         6.5        32.0   \n",
+       "5804                   []      NaN  tt10168094         6.2         9.0   \n",
+       "5805                   []      1.0  tt13711094         8.8        16.0   \n",
+       "\n",
+       "      tmdb_popularity  tmdb_score  \n",
+       "0               0.600         NaN  \n",
+       "1              27.612         8.2  \n",
+       "2              18.216         7.8  \n",
+       "3              17.505         7.8  \n",
+       "4              95.337         7.7  \n",
+       "...               ...         ...  \n",
+       "5801            0.966         NaN  \n",
+       "5802            1.036         8.5  \n",
+       "5803            0.709         NaN  \n",
+       "5804            2.186         NaN  \n",
+       "5805            0.979        10.0  \n",
+       "\n",
+       "[5806 rows x 15 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +350,7 @@
     "netflix_data = pandas.read_csv(\n",
     "    r\"C:/Users/alish/OneDrive/Desktop/HTH_build_sumer_2022/Finding-an-Interesting-Dataset-alisk8/titles.csv\")\n",
     "\n",
-    "netflix_data.head(5)"
+    "netflix_data"
    ]
   },
   {
@@ -233,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "73333221",
    "metadata": {},
    "outputs": [
@@ -245,9 +393,7 @@
       "TV-MA movies/tv shows have a mean of 7.08 IMDB score and 7.36 of TMDB score\n",
       "R movies/tv shows have a mean of 6.32 IMDB score and 6.47 of TMDB score\n",
       "TV-MA movies/tv shows have a mean of 6.21 IMDB score and 6.56 of TMDB score\n",
-      "TV-MA movies/tv shows have a mean of 7.26 IMDB score and 7.57 of TMDB score\n",
-      "\n",
-      "According to IMDB and TMDB, the highest rated age-certification is TV-MA and lowest rated is R\n"
+      "TV-MA movies/tv shows have a mean of 7.26 IMDB score and 7.57 of TMDB score\n"
      ]
     }
    ],
@@ -283,16 +429,156 @@
     "\n",
     "tv_mean_i = \"{:.2f}\".format(tv_14_data['imdb_score'].mean())\n",
     "tv_mean_t = \"{:.2f}\".format(tv_14_data['tmdb_score'].mean())\n",
-    "print(\"TV-MA movies/tv shows have a mean of\", tv_mean_i, \"IMDB score\", \"and\", tv_mean_t, \"of TMDB score\")\n",
+    "print(\"TV-MA movies/tv shows have a mean of\", tv_mean_i, \"IMDB score\", \"and\", tv_mean_t, \"of TMDB score\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6537e87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Movies/Tv shows that have comedy as a genre have an IMDB mean rating of 6.42 and TMDB mean rating of 6.74\n",
+      "Movies/Tv shows that don't have comedy as a genre have an IMDB mean rating of 6.62 and TMDB mean rating of 6.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 2: Do movies/tv shows with the genre \"comedy\" tend to do better than movies/tv shows w/out \"comedy\"?\n",
+    "\n",
+    "# drop all null values within genre, imdb score, tmdb score\n",
+    "clean_data1 = netflix_data.dropna(subset=['genres', 'imdb_score', 'tmdb_score'])\n",
+    "\n",
+    "# get data with and without comedy\n",
+    "data_w_comedy = clean_data1[ clean_data1['genres'].str.contains('comedy')] \n",
+    "data_wo_comedy = clean_data1[ ~ clean_data1['genres'].str.contains('comedy')] \n",
+    "\n",
+    "# find means \n",
+    "w_com_mean_i = \"{:.2f}\".format(data_w_comedy['imdb_score'].mean())\n",
+    "w_com_mean_t = \"{:.2f}\".format(data_w_comedy['tmdb_score'].mean())\n",
+    "\n",
+    "wo_com_mean_i = \"{:.2f}\".format(data_wo_comedy['imdb_score'].mean())\n",
+    "wo_com_mean_t = \"{:.2f}\".format(data_wo_comedy['tmdb_score'].mean())\n",
+    "\n",
+    "print(\"Movies/Tv shows that have comedy as a genre have an IMDB mean rating of\", w_com_mean_i, \"and TMDB mean rating of\", w_com_mean_t)\n",
+    "print(\"Movies/Tv shows that don't have comedy as a genre have an IMDB mean rating of\", wo_com_mean_i, \"and TMDB mean rating of\", wo_com_mean_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0ffb4875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Movies without drama have a mean runtime of 85.98 while movies with drama have a mean of 111.80\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 3: Do 'drama' movies tend to have a higher runtime?\n",
+    "\n",
+    "clean_data2 = netflix_data.dropna(subset=['genres', 'runtime'])\n",
+    "\n",
+    "# get data with only movies. Divide into two sections: with drama and without drama\n",
+    "movies_w_drama = clean_data2[ (clean_data2['type'] == 'MOVIE') & (clean_data2['genres'].str.contains('drama')) ]\n",
+    "mowies_wo_drama = clean_data2[ (~ clean_data2['genres'].str.contains('drama')) & (clean_data2['type'] == 'MOVIE') ]\n",
+    "\n",
+    "w_dra_mean = \"{:.2f}\".format(movies_w_drama['runtime'].mean())\n",
+    "wo_dra_mean = \"{:.2f}\".format(mowies_wo_drama['runtime'].mean())\n",
+    "\n",
+    "print(\"Movies without drama have a mean runtime of\", wo_dra_mean, \"while movies with drama have a mean of\", w_dra_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a6115fa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shows with less than 5 seasons\n",
+      "IMDB:  6.98\n",
+      "TMDB:  7.47\n",
+      "\n",
+      "Shows with more than 5 seasons\n",
+      "IMDB:  7.40\n",
+      "TMDB:  7.65\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 4: Do TV shows with more than 5 number of seasons tend to have a better rating than shows that donot?\n",
+    "\n",
+    "clean_data3 = netflix_data.dropna(subset=['imdb_score', 'tmdb_score', 'seasons'])\n",
+    "\n",
+    "shows_more_than_5 = clean_data3[ (clean_data3['type'] == 'SHOW') & (clean_data3['seasons'] >= 5)]\n",
+    "shows_less_than_5 = clean_data3[ (clean_data3['type'] == 'SHOW') & (clean_data3['seasons'] < 5)]\n",
+    "\n",
+    "l_five_mean_i = \"{:.2f}\".format(shows_less_than_5['imdb_score'].mean())\n",
+    "l_five_mean_t = \"{:.2f}\".format(shows_less_than_5['tmdb_score'].mean())\n",
+    "\n",
+    "m_five_mean_i = \"{:.2f}\".format(shows_more_than_5['imdb_score'].mean())\n",
+    "m_five_mean_t = \"{:.2f}\".format(shows_more_than_5['tmdb_score'].mean())\n",
+    "\n",
+    "print(\"Shows with less than 5 seasons\")\n",
+    "print(\"IMDB: \", l_five_mean_i)\n",
+    "print(\"TMDB: \", l_five_mean_t)\n",
     "\n",
     "print()\n",
-    "print(\"According to IMDB and TMDB, the highest rated age-certification is TV-MA and lowest rated is R\")"
+    "\n",
+    "print(\"Shows with more than 5 seasons\")\n",
+    "print(\"IMDB: \", m_five_mean_i)\n",
+    "print(\"TMDB: \", m_five_mean_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f7c42abd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "About 15.24 % of the movies/TV shows had 'crime' genre within the last 25 years\n",
+      "About 18.75 % of the movies/TV shows had 'crime' genre before last 25 years\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 5: Has the 'crime' genre increased in the last 25 years compared to the older years?\n",
+    "\n",
+    "clean_data3 = netflix_data.dropna(subset=['release_year', 'genres'])\n",
+    "\n",
+    "data_win_25_years = clean_data3[ (clean_data3['release_year'] > 1996) ]\n",
+    "data_b_25_years = clean_data3[ clean_data3['release_year'] <= 1996 ]\n",
+    "\n",
+    "data_win_25_years_c = data_win_25_years[ data_win_25_years['genres'].str.contains('crime') ]\n",
+    "data_b_25_years_c = data_b_25_years[ data_b_25_years['genres'].str.contains('crime') ]\n",
+    "\n",
+    "crime_per_win = \"{:.2f}\".format(( data_win_25_years_c['genres'].count() ) / (data_win_25_years['genres'].count()) * 100);\n",
+    "crim_per_b = ( data_b_25_years_c['genres'].count() ) / (data_b_25_years['genres'].count()) * 100;\n",
+    "\n",
+    "print(\"About\", crime_per_win, \"% of the movies/TV shows had 'crime' genre within the last 25 years\")\n",
+    "print(\"About\", crim_per_b, \"% of the movies/TV shows had 'crime' genre before last 25 years\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6537e87a",
+   "id": "e8a64096",
    "metadata": {},
    "outputs": [],
    "source": []
