--- a/Finding-an-Interesting-Dataset-alisk8/netflix_data.ipynb
+++ b/Finding-an-Interesting-Dataset-alisk8/netflix_data.ipynb
@@ -12,16 +12,16 @@
     "3. Do 'drama' movies tend to have a higher runtime?\n",
     "4. Do TV shows with more than 5 number of seasons tend to have a better rating than shows that donot?\n",
     "5. Has the 'crime' genre increased in the last 25 years compared to the older years?\n",
-    "6. Does the production country have a correlation with the runtime of a movie?\n",
+    "6. Do movies produced in US tend to have a higher runtime?\n",
     "7. Does the lenght of the title of the show/movie affect the ratings?\n",
-    "8. Does using specific letters in the movie/show name affect the popularity of the show/movie?\n",
-    "9. Does the runtime of shows per episode decrease/increase as the seasons progress?\n",
-    "10. Do specific genres in shows result in having a higher number of seasons?"
+    "8. Is data from last 25 years less popular than older data\n",
+    "9. Do shows with more than 5 seasons tend to have a higher or lower runtime than shows with less than 5 seasons?\n",
+    "10. In terms of ratings, is 'comedy' a more successful genre or 'horror'?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "f7fb60c3",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "[5806 rows x 15 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "0ffb4875",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "a6115fa0",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "f7c42abd",
    "metadata": {},
    "outputs": [
@@ -577,8 +577,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e8a64096",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Movies produced fully or partially in the US have a mean runtime of 89.94 while movies not produced in US have a mean runtime of 104.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 6: Do movies produced in US tend to have a higher runtime?\n",
+    "\n",
+    "clean_data4 = netflix_data.dropna(subset=['type', 'runtime', 'production_countries'])\n",
+    "\n",
+    "movies_in_us = clean_data4[ (clean_data4['type'] == 'MOVIE') & (clean_data4['production_countries'].str.contains('US') )]\n",
+    "movies_not_us = clean_data4[ (clean_data4['type'] == 'MOVIE') & (~ clean_data4['production_countries'].str.contains('US') )]\n",
+    "\n",
+    "mean_us = \"{:.2f}\".format(movies_in_us['runtime'].mean())\n",
+    "mean_n_us = \"{:.2f}\".format(movies_not_us['runtime'].mean())\n",
+    "\n",
+    "print(\"Movies produced fully or partially in the US have a mean runtime of\", mean_us, \"while movies not produced in US have a mean runtime of\", mean_n_us)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2f6de878",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data that have title names with less than or equal to 15 characters: \n",
+      "IMDB rating mean: 6.490647212869435\n",
+      "TMDB rating mean: 6.75379723157501\n",
+      "\n",
+      "Data that have title names with more than 15 characters: \n",
+      "IMDB rating mean: 6.58623005877414\n",
+      "TMDB rating mean: 6.8745172124265315\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 7: Does the lenght of the title of the show/movie affect the ratings?\n",
+    "\n",
+    "clean_data5 = netflix_data.dropna(subset=['title', 'imdb_score', 'tmdb_score'])\n",
+    "\n",
+    "data_w_less_than_15 = clean_data5[ clean_data5['title'].str.len() <= 15 ]\n",
+    "data_w_more_than_15 = clean_data5[ clean_data5['title'].str.len() > 15 ]\n",
+    "\n",
+    "mean_i_w_less_than_15 = data_w_less_than_15['imdb_score'].mean()\n",
+    "mean_t_w_less_than_15 = data_w_less_than_15['tmdb_score'].mean()\n",
+    "\n",
+    "mean_i_w_more_than_15 = data_w_more_than_15['imdb_score'].mean()\n",
+    "mean_t_w_more_than_15 = data_w_more_than_15['tmdb_score'].mean()\n",
+    "\n",
+    "print(\"Data that have title names with less than or equal to 15 characters: \")\n",
+    "print(\"IMDB rating mean:\", mean_i_w_less_than_15)\n",
+    "print(\"TMDB rating mean:\", mean_t_w_less_than_15)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print(\"Data that have title names with more than 15 characters: \")\n",
+    "print(\"IMDB rating mean:\", mean_i_w_more_than_15)\n",
+    "print(\"TMDB rating mean:\", mean_t_w_more_than_15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76d7b33a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean ratings of data from last 25 years:\n",
+      "IMDB: 6.529948927477017\n",
+      "TMDB: 6.817711950970377\n",
+      "\n",
+      "Mean ratings of older data:\n",
+      "IMDB: 6.71125\n",
+      "TMDB: 6.595625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 8: Is data from last 25 years less popular than older data\n",
+    "\n",
+    "clean_data7 = netflix_data.dropna(subset=['release_year', 'imdb_score', 'tmdb_score'])\n",
+    "\n",
+    "data_in_25_years = clean_data7[ (clean_data7['release_year'] > 1996) ]\n",
+    "older_data = clean_data7[ clean_data7['release_year'] <= 1996 ]\n",
+    "\n",
+    "i_rat_in25 = data_in_25_years['imdb_score'].mean()\n",
+    "t_rat_in25 = data_in_25_years['tmdb_score'].mean()\n",
+    "\n",
+    "i_rat_older = older_data['imdb_score'].mean()\n",
+    "t_rat_older = older_data['tmdb_score'].mean()\n",
+    "\n",
+    "print(\"Mean ratings of data from last 25 years:\")\n",
+    "print(\"IMDB:\", i_rat_in25)\n",
+    "print(\"TMDB:\", t_rat_in25)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print(\"Mean ratings of older data:\")\n",
+    "print(\"IMDB:\", i_rat_older)\n",
+    "print(\"TMDB:\", t_rat_older)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6dc15bf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shows with more than 5 seasons tend to have a per episode runtime of 32.69911504424779\n",
+      "Shows with less than 5 seasons tend to have a per episode runtime of 39.178903826266804\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 9: Do shows with more than 5 seasons tend to have a higher or lower runtime than shows with less than 5 seasons?\n",
+    "\n",
+    "clean_data6 = netflix_data.dropna(subset=['type', 'runtime', 'seasons'])\n",
+    "\n",
+    "shows_mt_5 = clean_data6[ (clean_data6['type'] == 'SHOW') & (clean_data6['seasons'] > 5)]\n",
+    "shows_lt_5 = clean_data6[ (clean_data6['type'] == 'SHOW') & (clean_data6['seasons'] <= 5)]\n",
+    "\n",
+    "mean_f_mt5 = shows_mt_5['runtime'].mean()\n",
+    "mean_f_lt5 = shows_lt_5['runtime'].mean()\n",
+    "\n",
+    "print(\"Shows with more than 5 seasons tend to have a per episode runtime of\", mean_f_mt5)\n",
+    "print(\"Shows with less than 5 seasons tend to have a per episode runtime of\", mean_f_lt5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d961da99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comedy data ratings: \n",
+      "IMDB 6.420749279538905\n",
+      "TMDB 6.736023054755044\n",
+      "\n",
+      "Horror data ratings: \n",
+      "IMDB 6.015168539325843\n",
+      "TMDB 6.461235955056179\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 10: In terms of ratings, is 'comedy' a more successful genre or 'horror'?\n",
+    "\n",
+    "clean_data8 = netflix_data.dropna(subset=['genres', 'imdb_score', 'tmdb_score'])\n",
+    "\n",
+    "comedy_data = clean_data8[ clean_data8['genres'].str.contains('comedy') ]\n",
+    "horror_data = clean_data8[ clean_data8['genres'].str.contains('horror') ]\n",
+    "\n",
+    "mean_c_i = comedy_data['imdb_score'].mean()\n",
+    "mean_c_t = comedy_data['tmdb_score'].mean()\n",
+    "\n",
+    "mean_h_i = horror_data['imdb_score'].mean()\n",
+    "mean_h_t = horror_data['tmdb_score'].mean()\n",
+    "\n",
+    "print('Comedy data ratings: ')\n",
+    "print('IMDB', mean_c_i)\n",
+    "print('TMDB', mean_c_t)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print('Horror data ratings: ')\n",
+    "print('IMDB', mean_h_i)\n",
+    "print('TMDB', mean_h_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59b86d42",
    "metadata": {},
    "outputs": [],
    "source": []
